--- a/BookStoreApp.Blazor.Server.UI/_Imports.razor
+++ b/BookStoreApp.Blazor.Server.UI/_Imports.razor
@@ -9,3 +9,5 @@
 @using BookStoreApp.Blazor.Server.UI
 @using BookStoreApp.Blazor.Server.UI.Shared
 @using BookStoreApp.Blazor.Server.UI.Services.Base
+@using BookStoreApp.Blazor.Server.UI.Services
+@using BookStoreApp.Blazor.Server.UI.Static
