--- a/BookStoreApp.Blazor.Server.UI/Pages/Authors/Index.razor
+++ b/BookStoreApp.Blazor.Server.UI/Pages/Authors/Index.razor
@@ -19,7 +19,7 @@ else
 	}
 	else
 	{
-		<AuthorizeView Roles=Roles.Administrator>
+		<AuthorizeView Roles=@Roles.Administrator>
 			<a class="btn btn-primary" href="/authors/create"><span class="oi oi-plus" aria-hidden="true"></span>Create </a>
 		</AuthorizeView>
 		
@@ -40,7 +40,7 @@ else
 					<td>@author.LastName</td>
 					<td>
 						<a class="btn btn-primary" href="/authors/details/@author.Id"><span class="oi oi-book" aria-hidden="true"></span>Details </a>
-						<AuthorizeView Roles=Roles.Administrator>
+						<AuthorizeView Roles=@Roles.Administrator>
 							<a class="btn btn-warning" href="/authors/update/@author.Id"><span class="oi oi-pencil" aria-hidden="true"></span>Edit </a>
 							<button class="btn btn-danger" @onclick=@(() => Delete(@author.Id))><span class="oi oi-delete" aria-hidden="true"></span>Delete </button>
 						</AuthorizeView>
