--- a/BookStoreApp.Blazor.Server.UI/Pages/Books/Create.razor
+++ b/BookStoreApp.Blazor.Server.UI/Pages/Books/Create.razor
@@ -1,4 +1,5 @@
 ﻿@page "/books/create/"
+@using BookStoreApp.Blazor.Server.UI.Models
 @attribute [Authorize(Roles = Roles.Administrator)]
 @inject IBookService bookService
 @inject IAuthorService authorService
@@ -79,9 +80,9 @@
 
 	protected override async Task OnInitializedAsync()
 	{
-		var response = await authorService.Get();
+		var response = await authorService.Get(new QueryParameters());
 		if (response.Success){
-			Authors = response.Data;
+			Authors = response.Data.Items.ToList();
 		}
 	}
 
