--- a/BookStoreApp.Blazor.WebAssembly.UI/_Imports.razor
+++ b/BookStoreApp.Blazor.WebAssembly.UI/_Imports.razor
@@ -13,3 +13,7 @@
 @using BookStoreApp.Blazor.WebAssembly.UI.Services.Base
 @using BookStoreApp.Blazor.WebAssembly.UI.Services
 @using BookStoreApp.Blazor.WebAssembly.UI.Static
+@using System.Collections.Generic;
+@using System.Linq;
+@using System.Threading.Tasks;
+@using AutoMapper;
